r83
- server crash fix
- deleted collision because it is not necessary
- fixed a script
------------------------------------------------------------------------------------
r82
- compile fix
- disabled antipvp script for compile until it workds :)
- hates ascent neu rev for 3.0.2 does not support 2.4.3 no ascent update!!!
- sun++ update fails so don't update it!!!
------------------------------------------------------------------------------------
r81
- server fix
- compile fix
------------------------------------------------------------------------------------
r80
- updated sun++ rev 331
- updated ascent rev 5104
- server dbc fix
------------------------------------------------------------------------------------
r79
- compile fix
------------------------------------------------------------------------------------
r78
- actual ascent rev 5092
- bounty hunter added
- changed commands for more flexibility
- updated ivorydb
- updated lostdb
- full lostdb support will be as actual as for arcemu!!!!
------------------------------------------------------------------------------------
r77
- actual sun++ rev 328
------------------------------------------------------------------------------------
r76
- actual ascent rev 5091
------------------------------------------------------------------------------------
r75 pre milestone 1
- changed Login News
- fixed chardb
- added IvoryDB for ascent
- changed configs
------------------------------------------------------------------------------------
r74
- crashfix for server
------------------------------------------------------------------------------------
r73
- disabled collision + vmap support (causes servercrashes)
------------------------------------------------------------------------------------
r72
- added GlobalNPC Sourcecode
------------------------------------------------------------------------------------
r71
- added Character tables
- added Logon tables