@@ -1,0 +1,1 @@
+alter table `worldmap_info` add column `cluster_handled` int(1) DEFAULT '1' NOT NULL after `collision`;
