@@ -1,3 +1,7 @@
+r84
+- changed configs to configs dir
+- Only half of the AHBot is in the SVN pls correct it!
+------------------------------------------------------------------------------------
 r83
 - server crash fix
 - deleted collision because it is not necessary
